--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,14 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* color-scheme: light dark; */
+  /* color: rgba(255, 255, 255, 0.87); */
+
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /* -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; */
 }
 
 a {
@@ -27,7 +27,8 @@ body {
   padding: 0;
   height: 100vh;
   width: 100vw;
-  background-color: #242424;
+  background-color: #ffffff;
+overflow-x: hidden;
   /* 
   display: flex;
   place-items: center;
@@ -75,3 +76,5 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+
